# pymf6-validation

./: .gitattributes  .gitignore  README.md  pyproject.toml
src/notebooks/: 1_river_well_model.html  1_river_well_model.ipynb  2_system_well_model.ipynb  3_river_well_transport_model.ipynb  control_test_well.py  example_2_no_wells.py  example_2_well_q_log.csv  flopy_example_2.py  fort.1000  interactive_mode_example_river.ipynb  interactive_mode_example_system.ipynb  out.txt  pymf6.ini.txt  pytest_utils.py  river_gw_control.py  river_solute_model.ipynb  river_transport_model.ipynb  river_well_system_transport_model.ipynb  system_well_control.py  systm_well_control.py  test.ipynb  test_base.py  transport_base.ipynb  transport_river_base.ipynb  trial.ipynb  well_control_results.csv  well_q_log.csv  well_system_control_old.py  well_system_transport_model.ipynb
src/notebooks/models/: mfsim.lst  mfsim.stdout
src/notebooks/models/flow_base/: gwf_flowbase.chd  gwf_flowbase.nam  gwf_flowbase.oc  gwf_flowbase.sto  mfsim.nam
src/notebooks/models/gwf_riverbase/: gwf_riverbase.dis  gwf_riverbase.hds  gwf_riverbase.nam  gwf_riverbase.oc  gwt_riverbase.ims  gwt_riverbase.oc  gwt_riverbase.ssm  gwt_riverbase.ucn  mfsim.lst  mfsim.nam  mfsim.stdout  riverbase.bud  riverbase.chd  riverbase.dis  riverbase.hds  riverbase.ic  riverbase.ims  riverbase.lst  riverbase.nam  riverbase.npf  riverbase.oc  riverbase.sto  riverbase.tdis  riverbase.wel
src/notebooks/models/gwf_transbase/: gwf_transbase.ic  mfsim.lst  (+4 more)
src/pymf6_validation/: base_model.py  main.py  make_model.py  plotting.py
(+175 files in other folders)
